--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,3 +1,7 @@
 {
-  "extends": "next/core-web-vitals"
+  "extends": ["next/core-web-vitals"],
+  "rules": {
+    "@typescript-eslint/no-var-requires": "off",
+    "react-hooks/rules-of-hooks": "off"
+  }
 }
