--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-dom": "18.3.1",
     "stripe": "^15.9.0",
     "tailwindcss": "^3.4.4",
+    "vercel": "^44.7.3",
     "zod": "^3.23.8"
   },
   "devDependencies": {
