--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react": "18.3.1",
     "react-dom": "18.3.1",
     "stripe": "^15.9.0",
+    "svix": "^1.71.0",
     "tailwindcss": "^3.4.4",
     "vercel": "^44.7.3",
     "zod": "^3.23.8"
