--- a/package.json
+++ b/package.json
@@ -13,8 +13,10 @@
   "dependencies": {
     "@clerk/nextjs": "^5.3.2",
     "@prisma/client": "^5.16.2",
+    "@types/lodash": "^4.17.20",
     "autoprefixer": "^10.4.18",
     "clsx": "^2.1.1",
+    "lodash": "^4.17.21",
     "next": "14.2.5",
     "postcss": "^8.4.35",
     "react": "18.3.1",
