--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@prisma/client": "^5.16.2",
     "@types/lodash": "^4.17.20",
     "autoprefixer": "^10.4.18",
+    "cheerio": "^1.1.2",
     "clsx": "^2.1.1",
     "lodash": "^4.17.21",
     "next": "14.2.5",
