--- a/package.json
+++ b/package.json
@@ -13,9 +13,11 @@
   "dependencies": {
     "@clerk/nextjs": "^5.3.2",
     "@prisma/client": "^5.16.2",
+    "@radix-ui/react-slot": "^1.2.3",
     "@types/lodash": "^4.17.20",
     "autoprefixer": "^10.4.18",
     "cheerio": "^1.1.2",
+    "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "lodash": "^4.17.21",
     "next": "14.2.5",
@@ -24,6 +26,7 @@
     "react-dom": "18.3.1",
     "stripe": "^15.9.0",
     "svix": "^1.71.0",
+    "tailwind-merge": "^3.3.1",
     "tailwindcss": "^3.4.4",
     "vercel": "^44.7.3",
     "zod": "^3.23.8"
