--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "@clerk/nextjs": "^5.3.2",
     "@prisma/client": "^5.16.2",
+    "@radix-ui/react-label": "^2.1.7",
     "@radix-ui/react-slot": "^1.2.3",
     "@types/lodash": "^4.17.20",
     "autoprefixer": "^10.4.18",
